# Uncertainty_Driven_LLM

./: .gitignore  HOW_TO_RUN_SELF_REPAIR.md  PROGRESS.md  README.md  ROADMAP.md  STATUS.md  SUMMARY.md  TEAM_PROGRESS_REPORT.md  detailedresearch.md  example_run_self_repair.py  myproject.md  pyproject.toml
app/: __init__.py  docstore.py  embedding.py  llm.py  main.py  metrics.py  rag.py
docs/: INDEX.md  final_checklist.md  implementation_plan.md  langgraph_implementation.md  project_summary.md  quick_start_guide.md
examples/: README.md  run_reasoning_benchmark.py  run_reasoning_demo.py  test_logtoku_integration.py
logtoku/: LLAMA32_RESULTS.md  LLAMA_TEST_RESULTS.md  LOGTOKU_ISSUES_AND_SOLUTIONS.md  README.md  SETUP_COMPLETE.md  TEST_RESULTS.md  UncertaintyPPT.pptx  debug_real_logits.py  diagnose_logtoku.py  download_model.py  env.yml  requirements.txt  setup.sh  test_llama.py  test_llama_simple.py  test_llama_simple_README.md  test_logtoku.py  test_queries.py  test_queries_fixed.py  uncertaintyofLLM_EN.pptx
logtoku/DynDecoding/: eval.ipynb  gene.py
logtoku/DynDecoding/configs/: prompts.json
logtoku/SenU/: generate.py  metrics.py  muti_eval.py  one_eval.py  run_eval.sh  run_genarate.sh  utils.py
src/token_self_repair/: config.py  types.py
src/token_self_repair.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/token_self_repair/evaluation/: __init__.py  judge.py  reasoning_runner.py
src/token_self_repair/llm/: __init__.py  llama_provider.py  openai_provider.py
tests/: test_openai_provider.py  test_self_repair.py  test_uncertainty.py
(+10 files in other folders)
